--- a/day 4/html1/index.html
+++ b/day 4/html1/index.html
@@ -1,8 +1,14 @@
 <html>
     <head>
         <title>My first html page</title>
+        <link rel="stylesheet" 
+        type ="text/css" 
+        media="screen" 
+        href="bulma.mini.css"/>
         </head>
         <body>
-            The time has come again
+            The time has come again again again
+            <br/>
+            Haleluya
         </body>
 </html>
