--- a/day 4/html1/index.html
+++ b/day 4/html1/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" 
         type ="text/css" 
         media="screen" 
-        href="bulma.mini.css"/>
+        href="bulma.min.css"/>
         </head>
         <body>
             The time has come again again again
