--- a/day7/part2/index.html
+++ b/day7/part2/index.html
@@ -50,7 +50,7 @@
           <div class="field">
             <input type="submit" id="submit-agency" value="select agencies" class="button is-primary"/>
           </div>
-          <div id='map'></div>
+         <div id="map"></div>
         </form>
       </div>
 
@@ -82,7 +82,8 @@
       </div>
     </div>
   
- 
+    <div ><iframe width="100%" height="600" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=university%20of%20the%20western%20cape+(south)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed">
+    </iframe></div><br />
      
     <script src="script.js"></script>
    
